fix: pagination: remove unnecessary padding
there is some extra padding on the top in case of simplified pagination

--- a/src/components/Pagination/pagination.module.scss
+++ b/src/components/Pagination/pagination.module.scss
@@ -95,7 +95,6 @@
 
   .page-tracker {
     opacity: 50%;
-    padding-top: $space-xxs;
   }
 
   &.dots {
